--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -31,6 +31,7 @@ Flask-Uploads==0.2.1
 Flask-WTF==1.2.1
 google-auth==2.35.0
 greenlet==3.0.3
+gunicorn==20.1.0
 idna==3.7
 importlib_metadata==8.2.0
 importlib_resources==6.4.0
