--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -2,13 +2,13 @@
 python = "3.11"
 
 [phases.setup]
-nixPkgs = ["python311", "python311Packages.pip"]
+nixPkgs = ["python311", "python311Packages.pip", "python311Packages.setuptools"]
 
 [phases.install]
 cmd = "pip install --upgrade pip && pip install -r requirements.txt"
 
 [phases.build]
-cmd = "echo 'Build phase completed'"
+cmd = "flask db upgrade || echo 'No migrations to run'"
 
 [start]
-cmd = "gunicorn run:app --bind 0.0.0.0:$PORT --workers 1 --timeout 120"
+cmd = "gunicorn run:app --bind 0.0.0.0:$PORT --workers 1 --timeout 120 --log-level info"
