--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,9 +35,8 @@
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
-  }
-
-  "proxy": "http://localhost:5000",
+  },
+  "proxy": "https://payforme.up.railway.app",
   "eslintConfig": {
     "extends": [
       "react-app",
